<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9D00FF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:id="@+id/imageView_fondoChampions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/fondo_champions" />

        <ImageView
            android:id="@+id/imageView_LogoChampions"
            android:layout_width="356dp"
            android:layout_height="135dp"
            android:layout_marginStart="13sp"
            android:layout_marginTop="25sp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/logo_champions_blanco" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0C1C81">

        <TextView
            android:id="@+id/textView_CorreoElectronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/correoElectronico"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.169" />

        <TextView
            android:id="@+id/textView_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/usuario"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <TextView
            android:id="@+id/textView_Contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contraseña"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <EditText
            android:id="@+id/editText_CorreoElectronico"
            android:layout_width="256dp"
            android:layout_height="45dp"
            android:backgroundTint="#7900FF"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/textView_TituloPaginaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/unetealjuego"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.031" />

        <EditText
            android:id="@+id/editText_Usuario"
            android:layout_width="256dp"
            android:layout_height="45dp"
            android:backgroundTint="#7900FF"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <EditText
            android:id="@+id/editText_Contraseña"
            android:layout_width="256dp"
            android:layout_height="45dp"
            android:backgroundTint="#7900FF"
            android:ems="10"
            android:fontFamily="sans-serif-thin"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.669" />

        <CheckBox
            android:id="@+id/checkBox_TerminosYPrivacidad"
            android:layout_width="285dp"
            android:layout_height="36dp"
            android:backgroundTint="#7900FF"
            android:buttonTint="#7900FF"
            android:fontFamily="sans-serif-medium"
            android:text="@string/aceptarTerminos"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:buttonIconTint="#7900FF"
            app:buttonIconTintMode="screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.773" />

        <Button
            android:id="@+id/button_EmpezarJugar"
            android:layout_width="213dp"
            android:layout_height="47dp"
            android:background="#7900FF"
            android:fontFamily="sans-serif-medium"
            android:onClick="iniciarApp"
            android:text="@string/empiezaAJugar"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.934" />

        <ImageView
            android:id="@+id/imageView_IconoBalon"
            android:layout_width="41dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="178dp"
            app:layout_constraintBottom_toBottomOf="@+id/button_EmpezarJugar"
            app:layout_constraintEnd_toEndOf="@+id/button_EmpezarJugar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_EmpezarJugar"
            app:layout_constraintTop_toTopOf="@+id/button_EmpezarJugar"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/balon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>